:twisted_rightwards_arrows: Solved conflicts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,10 @@
     "baseUrl": "src",
     "paths": {
       "@app/*": ["app/*"],
+      "@dashboard/*": ["app/modules/dashboard/*"],
       "@lancamentos/*": ["app/modules/lancamentos/*"],
-      "@pessoas/*": ["app/modules/pessoas/*"]
+      "@pessoas/*": ["app/modules/pessoas/*"],
+      "@shared/*": ["app/shared/*"],
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
