--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,13 @@
             ],
             "styles": [
               "src/styles.css",
-              "./node_modules/ng2-toasty/style-bootstrap.css",
               "./node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/nova-light/theme.css",
               "./node_modules/primeng/resources/primeng.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/chart.js/dist/Chart.js"
+            ]
           },
           "configurations": {
             "production": {
